# Streamer

./: .gitignore  LICENSE  README.md  Streamer.sln
Decoder/: Decoder.vcxproj  Decoder.vcxproj.filters
Decoder/src/: decoder.cpp  decoder.h  main.cpp
DecoderJs/: CMakeLists.txt  Decoder.cpp  Decoder.h  DecoderJs.vcxproj  DecoderJs.vcxproj.filters  Gruntfile.js  decoder-worker.js  decoder.js.mem  embinder.cpp  package.json
HTML5/: bufferAll.html  bufferWhenNeeded.html  gl-utils.js  index.js  listener.html  simple_server.py  test2.css  test2.html  test2.js
StreamLib/: StreamLib.vcxproj  StreamLib.vcxproj.filters
StreamLib/src/: streamer.cpp
Streamer/: Streamer.vcxproj  Streamer.vcxproj.filters
Streamer/src/: main.cpp  streamer.cpp  streamer.h
Streamer/src/strategies/: FileStreamingStrategy.cpp  FileStreamingStrategy.h  IStreamingStrategy.h  RTPStreamingStrategy.cpp  RTPStreamingStrategy.h
TestWindow/: TestWindow.vcxproj  TestWindow.vcxproj.filters
TestWindow/src/: main.cpp
TestWindow2/: TestWindow2.vcxproj  TestWindow2.vcxproj.filters
TestWindow2/src/: main.cpp  streamer.cpp  streamer.h
TestWindow2/src/freetype/: freetype_utils.cpp  freetype_utils.h
ViewportServerPlugin/: ViewportServerPlugin.vcxproj  ViewportServerPlugin.vcxproj.filters
ViewportServerPlugin/src/: common.h  function_stream.h  nf_config_data.cpp  nf_json_parser.cpp  nf_memory_tracker.cpp  nf_string_table.cpp  nflibs.h  streamer.cpp  streamer.h  viewport_client.cpp  viewport_client.h  viewport_server.cpp  viewport_server.h  viewport_server_plugin.cpp
(+4 files in other folders)
